--- a/Index.html
+++ b/Index.html
@@ -3,98 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Cards</title>
+    <meta name="description" content="Project 2 O.S.">
+    <meta name="author" content="Malhar_Dev_Yash_Neetu_Varsha">
     <link rel="stylesheet" href="style.css">
-</head>
+    <title>Project 2 O.S.</title>
+    
 <body>
 
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-battery-full" viewBox="0 0 16 16">
+  <path d="M2 6h10v4H2z"/>
+  <path d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8"/>
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-wifi" viewBox="0 0 16 16">
+  <path d="M15.384 6.115a.485.485 0 0 0-.047-.736A12.44 12.44 0 0 0 8 3C5.259 3 2.723 3.882.663 5.379a.485.485 0 0 0-.048.736.52.52 0 0 0 .668.05A11.45 11.45 0 0 1 8 4c2.507 0 4.827.802 6.716 2.164.205.148.49.13.668-.049"/>
+  <path d="M13.229 8.271a.482.482 0 0 0-.063-.745A9.46 9.46 0 0 0 8 6c-1.905 0-3.68.56-5.166 1.526a.48.48 0 0 0-.063.745.525.525 0 0 0 .652.065A8.46 8.46 0 0 1 8 7a8.46 8.46 0 0 1 4.576 1.336c.206.132.48.108.653-.065m-2.183 2.183c.226-.226.185-.605-.1-.75A6.5 6.5 0 0 0 8 9c-1.06 0-2.062.254-2.946.704-.285.145-.326.524-.1.75l.015.015c.16.16.407.19.611.09A5.5 5.5 0 0 1 8 10c.868 0 1.69.201 2.42.56.203.1.45.07.61-.091zM9.06 12.44c.196-.196.198-.52-.04-.66A2 2 0 0 0 8 11.5a2 2 0 0 0-1.02.28c-.238.14-.236.464-.04.66l.706.706a.5.5 0 0 0 .707 0l.707-.707z"/>
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-headphones" viewBox="0 0 16 16">
+  <path d="M8 3a5 5 0 0 0-5 5v1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V8a6 6 0 1 1 12 0v5a1 1 0 0 1-1 1h-1a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h1V8a5 5 0 0 0-5-5"/>
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+  <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+</svg>
+
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-gear" viewBox="0 0 16 16">
+  <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"/>
+  <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115z"/>
+</svg>
+
+<div class="desktop">
+
+  <a href="https://www.google.com/chrome/" target="_blank" class="icon">
+    <img src="browser-chrome.svg" alt="Chrome">
+    <span>Chrome</span>
+  </a>
+
+  <a href="https://discord.com" target="_blank" class="icon">
+    <img src="discord.svg" alt="Discord">
+    <span>Discord</span>
+  </a>
+
+  <a href="https://facebook.com" target="_blank" class="icon">
+    <img src="facebook.svg" alt="Facebook">
+    <span>Facebook</span>
+  </a>
+
+  <a href="https://openai.com" target="_blank" class="icon">
+    <img src="openai.svg" alt="OpenAI">
+    <span>OpenAI</span>
+  </a>
+
+</div>
+
+  <input type="checkbox" id="theme-toggle">
+
+  <input type="checkbox" id="start-toggle">
+
+  <input type="checkbox" id="win-about">
+
+  <div class="desktop">
+
+    <label for="win-about" class="icon">💬 About</label>
+    <a href="#note" class="icon">📝 Notes</a>
+  </div>
+
+  <div class="window about">
     <header>
-        <h1>Delicious Paneer Recipes</h1>
-        <label for="theme-btn"> Theme
-        <input type="checkbox" name="theme-btn" id="theme-btn"  >
-        </label>
+      <h2>About Mini OS</h2>
+      <label for="win-about" class="close">X</label>
     </header>
+    <p>Welcome to our mini os</p>
+    <p>Hello my brothers their sisters</p>
+    <p>we created this page for only fun</p>
+    <p>by the orders of our mentors</p>
+    <p>Thanks for reading</p>
+  </div>
 
+  <div id="note" class="note" contenteditable="true">
+    Type here...
+  </div>
 
-    <div class="recipe-grid">
-    <div class="recipe-card">
-   <img src="ShahiPaneer-3.jpg" alt="Sahi Paneer">
-    <h2>Sahi Paneer</h2>
-       <ul>
-       <li>Paneer</li>
-       <li>Cashew nuts</li>
-       <li>Tomatoes</li>
-       <li>Butter</li>
-       <li>Onion</li>
-       <li>Fenugreek leaf</li>
-       <li>Spices</li>
-       </ul>
-            <p>Calories per serving: 350 kcal</p>
-     </div>
+  <div class="clock">
+    <div class="hand hour"></div>
+    <div class="hand min"></div>
+    <div class="hand sec"></div>
+  </div>
 
-     <div class="recipe-card">
-    <img src="Chilli-paneer-dry.jpg" alt="Paneer Chilli">
-      <h2>Paneer Chilli</h2>
-       <ul>
-       <li>Paneer</li>
-       <li>Capsicum</li>
-       <li>Bell peppers</li>
-       <li>Onions</li>
-       <li>Chili sauce</li>
-       <li>Soya sauce</li>
-       <li>Spices</li>
-       </ul>
-            <p>Calories per serving: 400 kcal</p>
-        </div>
+  <div class="taskbar">
+    <label for="start-toggle" class="start">Start</label>
+    <label for="theme-toggle" class="theme">🌙/☀️</label>
+  </div>
 
-     <div class="recipe-card">
-     <img src="1698153487683.jpg" alt="Paneer Korma">
-       <h2>Paneer Korma</h2>
-        <ul>
-       <li>Paneer</li>
-       <li>Coconut milk</li>
-       <li>Onions</li>
-       <li>Cashews</li>
-       <li>Coriender</li>
-       <li>Spices</li>
-       <li>Garam masala</li>
-         </ul>
-            <p>Calories per serving: 450 kcal</p>
-        </div>
-
-      <div class="recipe-card">
-      <img src="Kadhai-Paneer-Thumbnail.jpg" alt="Kadhai Paneer">
-         <h2>Kadhai Paneer</h2>
-         <ul>
-         <li>Paneer</li>
-         <li>Black peppers</li>
-         <li>Bell peppers</li>
-         <li>Onions</li>
-         <li>Ginger-garlic paste</li>
-         <li>Tomatoes</li>
-         <li>Garam masala</li>
-         </ul>
-            <p>Calories per serving: 375 kcal</p>
-        </div>
-
-       <div class="recipe-card">
-      <img src="images.jpeg" alt="Paneer Do Pyaza">
-         <h2>Paneer Do Pyaza</h2>
-           <ul>
-           <li>Paneer</li>
-           <li>Onions</li>
-           <li>Tomatoes</li>
-           <li>Ginger garlic paste</li>
-           <li>Spices</li>
-           <li>Coriender</li>
-           <li>Fenugreek leaf</li>
-            </ul>
-            <p>Calories per serving: 370 kcal</p>
-        </div>
-    </div>
-
+  <div class="start-menu">
+    <label for="win-about">Open About</label><br>
+    <a href="#note">Open Notes</a>
+  </div>
 </body>
-<footer>
-    
-</footer>
 </html>
